--- a/exercise6/task1/index.html
+++ b/exercise6/task1/index.html
@@ -4,6 +4,8 @@
     <title></title>
   </head>
   <body>
+    <script src="/functionality.js">
+</script>
   <div id="fibo"></div>  
   </body>
 </html>
